# ogamba

./: .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  database.py  main.py  models.py  pyproject.toml  schemas.py  test.db  test_data_items.py
backend/alembic/: env.py
backend/alembic/versions/: 421a04666c5b_initial_migration.py  9b2b80555012_add_dataitem_model.py  a1e79b6d86f7_add_timestamps_to_project.py  fa3cccdc7b33_add_deleted_flag_to_project.py
backend/tests/: test_projects.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Callback.jsx  Dashboard.css  Dashboard.jsx  ProjectDetail.css  ProjectDetail.jsx  index.css  main.jsx
